--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             
     </div>
     <div class="imgcontainer">
-          <img src="../UXD_OnlinePresense_19174446_HeidiCheung/images/welcome.png"  alt="welcome.png">
+          <img src="images/welcome.png"  alt="welcome.png">
     </div>
    
     
